tests/cases/compiler-development/artifact/errors/diagnostic-generic-function-pointer-uninferred.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' could not be inferred for function pointer 'keep'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" display="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" bytes=105
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-function-pointer-uninferred.ari" line=6 column=28 end_line=6 end_column=32 byte_start=89 byte_end=93 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-function-pointer-uninferred.ari:6:28\n   |\n 6 |   let op: fn(i64) -> i64 = keep;\n   |                            ^^^^"
